# TFG

./: .gitignore  README.md  model_ctgan_pretrained.pt  model_diffusion_pretrained.pt  model_tvae_pretrained.pt  notebook_test.ipynb  notebook_test_diffusion.ipynb  preguntas.txt  preguntas2.txt  presentacion.ipynb  probartabddpm.py  prueba.ipynb  pyproject.toml  requirements-cpu.txt  requirements-gpu.txt  requirements.txt
CraftingTable/: CraftingTable.py  __init__.py  ct_utils.py  ctgan.py  tvae.py  utils.py
CraftingTable/models/: base.py  ctgan.py  real_tabformer.py  tabddpm.py  tabddpm_mlp.py  tabddpm_resnet.py  tabsyn.py  tvae.py
CraftingTable/models/ckpt/: decoder.pt  encoder.pt  vae_model.pt
CraftingTable/models/tabddpm/: ddpm.py  gaussian_multinomial_diffsuion.py  modules.py  train.py  utils_train.py
CraftingTable/models/tabddpm_utils/: utils.py
CraftingTable/models/tabsyn_utils/: latent_utils.py
CraftingTable/models/tabsyn_utils/vae/: main.py  model.py  utils_train.py
CraftingTable/tabddpm/: gaussian_multinomial_diffsuion.py  modules.py  sample.py  train.py  utils.py
